[package]
name = "gianna"
version = "0.0.2"
authors = ["boio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.4.0"
regex = "1"
rust-stemmers = "^1.0"
ngrams = "1.0.1"
strsim = "0.10.0"
md5 = "0.7.0"
rand = "0.7"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
